--- a/launch-page/index.html
+++ b/launch-page/index.html
@@ -51,7 +51,7 @@
     </div>
     <div class="col-lg-4">
       <h3>Fun</h3>
-      <p class="lead"> Come have fun at Rick's! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
     </div>
     <div class="col-lg-4">
       <h3>Challenging</h3>
